added empty js file

--- a/dicee.html
+++ b/dicee.html
@@ -9,7 +9,7 @@
   </head>
   <body>
 
-    <div class="container">  
+    <div class="container">
       <h1>Refresh Me</h1>
 
       <div class="dice">
@@ -30,4 +30,5 @@
   <footer>
     www 🎲 App Brewery 🎲 com
   </footer>
+  <script src="scripts.js" charset="utf-8"></script>
 </html>
