--- a/dicee.html
+++ b/dicee.html
@@ -14,21 +14,21 @@
 
       <div class="dice">
         <p>Player 1</p>
-        <img class="img1" src="">
+        <img class="img1" src="images/dice6.png">
       </div>
 
       <div class="dice">
         <p>Player 2</p>
-        <img class="img2" src="">
+        <img class="img2" src="images/dice6.png">
       </div>
 
     </div>
 
-
+    <script src="scripts.js" charset="utf-8"></script>
+  
   </body>
 
   <footer>
     www 🎲 App Brewery 🎲 com
   </footer>
-  <script src="scripts.js" charset="utf-8"></script>
 </html>
